// ============================================================
// GO LABURO — Diagrama de base de datos (DBML)
// Pega este contenido en https://dbdiagram.io -> New Diagram
// (Reemplaza todo el contenido del editor con este archivo)
// ============================================================

Project GoLaburo {
  database_type: 'PostgreSQL'
  Note: 'App móvil que conecta técnicos independientes con clientes en Cochabamba'
}

// Tabla gestionada por Supabase Auth — no se crea en nuestras migraciones,
// se incluye solo como referencia visual para las FKs.
Table auth_users {
  id uuid [pk, note: 'auth.users — gestionado 100% por Supabase Auth']
  email text
  encrypted_password text [note: 'hash bcrypt, manejado por Supabase (RNF-05)']
  created_at timestamptz
}

Table categories {
  id          uuid      [pk, default: `gen_random_uuid()`]
  name        text      [unique, not null]
  icon        text
  description text
  created_at  timestamptz [not null, default: `now()`]
}

Table profiles {
  id          uuid        [pk, ref: - auth_users.id, note: 'FK 1-a-1 con auth.users, on delete cascade']
  full_name   text        [not null]
  phone       text        [not null]
  avatar_url  text
  created_at  timestamptz [not null, default: `now()`]
  updated_at  timestamptz [not null, default: `now()`]
}

Table technical_profiles {
  id                uuid        [pk, default: `gen_random_uuid()`]
  profile_id        uuid        [unique, not null, ref: - profiles.id, note: '1 perfil técnico por usuario, on delete cascade']
  category_id       uuid        [not null, ref: > categories.id]
  bio               text
  coverage_zones    "text[]"    [not null, default: `'{}'`]
  base_rate         numeric     [not null, default: `0`]
  is_active         boolean     [not null, default: `true`]
  avg_rating        numeric     [not null, default: `0`, note: 'recalculado por trigger, RF-25']
  ratings_count     integer     [not null, default: `0`]
  years_experience  integer
  created_at        timestamptz [not null, default: `now()`]
  updated_at        timestamptz [not null, default: `now()`]
}

Table service_requests {
  id                    uuid            [pk, default: `gen_random_uuid()`]
  client_id             uuid            [not null, ref: > profiles.id, note: 'on delete cascade']
  technician_id         uuid            [not null, ref: > technical_profiles.id, note: 'on delete cascade']
  category_id           uuid            [not null, ref: > categories.id]
  description           text            [not null, note: 'max 200 chars, RF-15']
  suggested_date        date            [not null]
  suggested_time_range  text
  zone                  text            [not null]
  address               text            [not null]
  status                request_status  [not null, default: 'pending', note: 'pending | accepted | rejected | completed (RF-20)']
  created_at            timestamptz     [not null, default: `now()`]
  updated_at            timestamptz     [not null, default: `now()`]
}

Table reviews {
  id                  uuid        [pk, default: `gen_random_uuid()`]
  service_request_id  uuid        [unique, not null, ref: - service_requests.id, note: '1 review por solicitud, RF-26, on delete cascade']
  client_id           uuid        [not null, ref: > profiles.id]
  technician_id       uuid        [not null, ref: > technical_profiles.id]
  rating              int2        [not null, note: 'check 1-5, RF-23']
  comment             text        [note: 'max 200 chars, RF-24']
  created_at          timestamptz [not null, default: `now()`]
}

// Enum usado en service_requests.status
Enum request_status {
  pending
  accepted
  rejected
  completed
}

// ------------------------------------------------------------
// Notas sobre objetos que este diagrama NO representa
// (DBML solo modela tablas/relaciones, no vistas/funciones/RLS):
//   - Vistas: technicians_public, reviews_public
//   - Funciones: get_technician_phone(), get_client_phone(),
//                handle_new_user(), update_technician_rating(),
//                validate_new_service_request(), validate_status_transition()
//   - RLS policies en cada tabla (ver 001_init_schema.sql, sección 8)
//   - Realtime habilitado en service_requests (sección 12)
// ------------------------------------------------------------
